@@ -57,14 +57,18 @@
 
 #include <rtl-sdr.h>
 
+#ifdef __arm__
+// Assume we need to use a bounce buffer to avoid performance problems on Pis running kernel 5.x and using zerocopy
+#define USE_BOUNCE_BUFFER
+#endif
+
 static struct {
     iq_convert_fn converter;
     struct converter_state *converter_state;
     rtlsdr_dev_t *dev;
     int ppm_error;
     bool digital_agc;
-    uint8_t padding1;
-    uint16_t padding2;
+    uint8_t *bounce_buffer;
 } RTLSDR;
 
 //
@@ -77,6 +81,7 @@ void rtlsdrInitConfig() {
     RTLSDR.ppm_error = 0;
     RTLSDR.converter = NULL;
     RTLSDR.converter_state = NULL;
+    RTLSDR.bounce_buffer = NULL;
 }
 
 static void show_rtlsdr_devices() {
@@ -242,6 +247,14 @@ bool rtlsdrOpen(void) {
         return false;
     }
 
+#ifdef USE_BOUNCE_BUFFER
+    if (!(RTLSDR.bounce_buffer = malloc(MODES_RTL_BUF_SIZE))) {
+        fprintf(stderr, "rtlsdr: can't allocate bounce buffer\n");
+        rtlsdrClose();
+        return false;
+    }
+#endif
+
     return true;
 }
 
@@ -295,8 +308,13 @@ static void rtlsdrCallback(unsigned char *buf, uint32_t len, void *ctx) {
         dropped = samples_read - to_convert;
     }
 
-    RTLSDR.converter(buf, &outbuf->data[outbuf->overlap], to_convert, RTLSDR.converter_state, &outbuf->mean_level, &outbuf->mean_power);
+#ifdef USE_BOUNCE_BUFFER
+    // Work around zero-copy slowness on Pis with 5.x kernels
+    memcpy(RTLSDR.bounce_buffer, buf, to_convert * 2);
+    buf = RTLSDR.bounce_buffer;
+#endif
 
+    RTLSDR.converter(buf, &outbuf->data[outbuf->overlap], to_convert, RTLSDR.converter_state, &outbuf->mean_level, &outbuf->mean_power);
     outbuf->validLength = outbuf->overlap + to_convert;
 
     // accumulate CPU while holding the mutex, and restart measurement
@@ -330,5 +348,10 @@ void rtlsdrClose() {
         cleanup_converter(RTLSDR.converter_state);
         RTLSDR.converter = NULL;
         RTLSDR.converter_state = NULL;
+    }
+
+    if (RTLSDR.bounce_buffer) {
+        free(RTLSDR.bounce_buffer);
+        RTLSDR.bounce_buffer = NULL;
     }
 }
