@@ -8,6 +8,7 @@ readsb (4.0.1~dev) UNRELEASED; urgency=medium
   * Update bootstrap v4.5.0.
   * via dump1090-fa
     * Factor out FIFO handling; reimplement as a linked list, not a circular buffer.
+    * Use a bounce buffer for rtlsdr on ARM to work around zero-copy problems.
 
  -- Michael Wolf <michael@mictronics.de>  Sat, 01 Aug 2020 09:38:01 +0200
 
